macro/tests/proc-macro-tests/fvm_state.stderr
error: structs with #[fvm_state] cannot have lifetime or type parameters
  --> tests/proc-macro-tests/fvm_state.rs:10:23
   |
10 | pub struct MockStruct2<'a> {
   |                       ^^^^

error[E0277]: the trait bound `InnerStruct: Serialize` is not satisfied
   --> tests/proc-macro-tests/fvm_state.rs:14:1
    |
14  | #[fvm_state]
    | ^^^^^^^^^^^^ the trait `Serialize` is not implemented for `InnerStruct`
    |
    = help: the following other types implement trait `Serialize`:
              &'a T
              &'a mut T
              ()
              (T0, T1)
              (T0, T1, T2)
              (T0, T1, T2, T3)
              (T0, T1, T2, T3, T4)
              (T0, T1, T2, T3, T4, T5)
            and 203 others
    = note: required because of the requirements on the impl of `Serialize` for `&InnerStruct`
note: required by a bound in `serialize_newtype_struct`
   --> $CARGO/serde-1.0.139/src/ser/mod.rs
    |
    |         T: Serialize;
    |            ^^^^^^^^^ required by this bound in `serialize_newtype_struct`
    = note: this error originates in the derive macro `fvm_rs_sdk::serde_tuple::Serialize_tuple` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `InnerStruct: Deserialize<'_>` is not satisfied
  --> tests/proc-macro-tests/fvm_state.rs:16:16
   |
16 |     pub inner: InnerStruct,
   |                ^^^^^^^^^^^ the trait `Deserialize<'_>` is not implemented for `InnerStruct`
   |
   = help: the following other types implement trait `Deserialize<'de>`:
             &'a Path
             &'a [u8]
             &'a cs_serde_bytes::bytes::Bytes
             &'a serde_bytes::bytes::Bytes
             &'a str
             ()
             (T0, T1)
             (T0, T1, T2)
           and 208 others

error[E0277]: the trait bound `InnerStruct: Deserialize<'_>` is not satisfied
    --> tests/proc-macro-tests/fvm_state.rs:16:16
     |
16   |     pub inner: InnerStruct,
     |                ^^^^^^^^^^^ the trait `Deserialize<'_>` is not implemented for `InnerStruct`
     |
     = help: the following other types implement trait `Deserialize<'de>`:
               &'a Path
               &'a [u8]
               &'a cs_serde_bytes::bytes::Bytes
               &'a serde_bytes::bytes::Bytes
               &'a str
               ()
               (T0, T1)
               (T0, T1, T2)
             and 208 others
note: required by a bound in `next_element`
    --> $CARGO/serde-1.0.139/src/de/mod.rs
     |
     |         T: Deserialize<'de>,
     |            ^^^^^^^^^^^^^^^^ required by this bound in `next_element`
